--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,7 +501,7 @@ img {
     z-index: 2000;
 }
 
-@media all and (min-width: 320px)  and (max-width: 800px){
+@media all and (min-width: 320px)  and (max-width: 900px){
     .Header-buttonNav {
         display: inline-block;
         height: 34px;
@@ -567,7 +567,7 @@ img {
 #header-menu{
     height: 50px;
     margin: auto;
-    width: 1180px;
+    max-width: 1180px;
 }
 
 #header-menu nav{
@@ -1685,7 +1685,7 @@ button.icon-search{
         display: inline-block;
     }
 }
-@media (max-width: 800px) {
+@media (max-width: 900px) {
     .Input-more form {
         width: auto;
     }
@@ -1912,8 +1912,14 @@ footer{
 
 /* RESPONSIBE */
 
-@media all and (min-width: 320px)  and (max-width: 820px){
+@media all and (min-width: 320px)  and (max-width: 900px){
 
+    .Header-content{
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    
     #slider{
         display: none;
     }
@@ -1921,6 +1927,7 @@ footer{
     .Content-home{
         text-align: center;
         width: 100%;
+        margin: 0;
     }
 
     .content-Request{
@@ -1997,4 +2004,41 @@ footer{
         width: 100%;
     }
 
+}
+
+@media all and (min-width: 900px)  and (max-width: 1179px){
+    #header-menu ul li{
+        margin: 13px 12px 20px 7px;
+    }
+
+    .Content-home{
+        text-align: center;
+    }
+}
+
+@media all and (min-width: 1145px)  and (max-width: 1179px){
+    .content-sign-up{
+        margin: 0;
+    }
+}
+
+@media all and (min-width: 900px)  and (max-width: 1144px){
+
+    .Login{
+        display: inline-block;
+        padding-left: 15px;
+    }
+
+    .content-creditRequest{
+        display: inline-block;
+        height: 245px;
+        margin-top: 0px;
+        margin-left: 33px;
+        vertical-align: top;
+        padding-top: 36px;
+    }
+
+    .content-sign-up{
+        margin: 10px;
+    }
 }
