--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1930,6 +1930,11 @@ footer{
     }
 
 }
+@media all and (min-width: 200px)  and (max-width: 400px){
+    .content-sign-up{
+        width: 91%!important;
+    }
+}
 
 @media all and (min-width: 320px)  and (max-width: 900px){
 
@@ -1971,7 +1976,6 @@ footer{
 
     .content-sign-up{
         text-align: left;
-        max-width: 357px!important;
         margin-left: 0;
     }
 
@@ -2019,6 +2023,7 @@ footer{
     .wrap-content{
         display: block;
         height: 32px;
+        margin-top: 26px;
         text-align: center;
     }
 
