--- a/public/css/style.css
+++ b/public/css/style.css
@@ -280,6 +280,10 @@
 
 .icon-pinterest:before { content:'\e89'; }
 
+.body-all{
+    height: 100%;
+}
+
 *:focus {
     outline: 0;
 }
@@ -296,7 +300,7 @@ a {
 
 html, body {
     width: 100%;
-    margin: 0;
+    height: 100%;
 }
 
 body {
@@ -732,7 +736,15 @@ img {
 
 .Login section figure{
     display: inline-block;
+    position: relative;
     width: 110px;
+    height: 100px;
+}
+
+.Login section figure img{
+    position: absolute;
+    width: 100px;
+    height: 90px;
 }
 
 .Login section div{
@@ -924,6 +936,7 @@ input[type=file] {
 .Credit-select {
     font-size: 18px;
     height: 35px;
+    margin-top: 19px;
     width: 100%;
     background: transparent;
     border:1px solid rgb(232, 14, 138);
@@ -1543,7 +1556,7 @@ button.icon-search{
 }
 
 #slider-edit section{
-    width: 23%;
+    width: 47.6%;
     display: inline-block;
     margin: 23px 8px;
 }
@@ -1710,6 +1723,11 @@ button.icon-search{
 
 /*DATOS DE ACEPTACION DEL CREDITO*/
 
+.errors{
+    color: red;
+    margin-top: -30px;
+}
+
 #showFiles{
     display: block;
     margin: auto;
@@ -1851,6 +1869,7 @@ button.icon-search{
     color: rgba(0, 0, 0, 0.69);;
     padding-top: 6px;
     text-align: center;
+    margin-top: -79px;
 }
 
 .content-social .social-text a {
@@ -1897,9 +1916,6 @@ footer{
     margin-right: 38px;
 }
 
-.material{
-    margin-top: -19px;
-}
 
 .material-card{
     background: rgba(222, 222, 222, 0.29);
@@ -1922,6 +1938,8 @@ footer{
     width: 100%;
 
 }
+
+
 
 /* RESPONSIBE */
 
