--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2355,3 +2355,71 @@ footer{
     text-transform: uppercase;
     font-size: 13px;
 }
+
+.material-header{
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.material-header .material-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:121px;
+    height:121px;
+    margin:5px;
+    position: relative;
+}
+
+.material-header .material-card{
+    min-width:280px;
+}
+
+.material-item.fingerprint{
+    border: 1px dashed #E80E8A;
+}
+
+.material-item output{
+    position: absolute;
+    top:0;
+    left: 0;
+    width:100%;
+    height:100%;
+    overflow: hidden;
+}
+
+#dropzone {
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+#dropzone div {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+#dropzone img {
+    width: 100%;
+    height: 100%;
+}
+
+#dropzone [type="file"] {
+    cursor: pointer;
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
