--- a/app/resources/sass/main.sass
+++ b/app/resources/sass/main.sass
@@ -68,3 +68,25 @@
         box-shadow: 0em -3em 0 -1em, 2em -2em 0 -1em, 3em 0em 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0.2em, -2em -2em 0 0
     87.5%
         box-shadow: 0em -3em 0 0, 2em -2em 0 -1em, 3em 0 0 -1em, 2em 2em 0 -1em, 0 3em 0 -1em, -2em 2em 0 0, -3em 0em 0 0, -2em -2em 0 0.2em
+
+.u-button.bloqued
+    opacity: .3
+    cursor: default
+
+.Credit
+    h2.title, 
+    span.subtitle
+        display: block
+        text-align: center
+
+    h2.title
+        margin-top: 10px
+        padding: 20px 5px
+        font-size: 1.5rem
+    span.subtitle
+        font-size: 1.1rem
+        text-transform: uppercase
+
+.notify
+    color: #fff
+    font-size: 1rem
